--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head> 
 <body> 
   <h1>Hello, Web Application Development!</h1> 
-  <p>This is my first webpage hosted with GitHub Pages.</p> 
+  <p>This is my webpage hosted with GitHub Pages.</p> 
 </body> 
 </html> 
