--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <h1>Hello, Web Application Development!</h1> 
   <h2>My name is !@#$#%^&</h2>
   <p>This is my webpage hosted with GitHub Pages.</p> 
+  <a href="https://www.google.com">Go to Google</a> 
 </body> 
 </html> 
