--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 </head> 
 <body> 
   <h1>Hello, Web Application Development!</h1> 
+  <hr/>
+  <br/>
   <h2>My name is !@#$#%^&</h2>
   <p>This is my webpage hosted with GitHub Pages.</p> 
   <a href="https://www.google.com">Go to Google</a> 
+  <input type=“text” name=“username”/> 
+  <div data-user="John"></div> 
+  <a href="https://www.au.edu" target="_blank" title="Visit Assumption University">AU Website</a> 
 </body> 
 </html> 
