--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <a href="https://www.google.com">Go to Google</a> 
   <input type=“text” name=“username”/> 
   <div data-user="John"></div> 
+  <image src="https://miro.medium.com/v2/resize:fit:1024/format:webp/1*GaBtlHe240ZkwlcBrFczgQ.jpeg" alt="Computer Photo" width="300" height="200" /> 
   <a href="https://www.au.edu" target="_blank" title="Visit Assumption University">AU Website</a> 
+  <ul> 
+  <li>Apple</li> 
+  <li>Banana</li> 
+  <li>Orange</li> 
+  </ul> 
+  <ol> 
+  <li>First item</li> 
+  <li>Second item</li> 
+  <li>Third item</li> 
+  </ol> 
+  <p>My favorite color is <span style="color: blue;">blue</span>.</p> 
 </body> 
 </html> 
