--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
   <li>Third item</li> 
   </ol> 
   <p>My favorite color is <span style="color: blue;">blue</span>.</p> 
+  <header>Website header content</header> 
+  <nav>Navigation links</nav> 
+  <main>Main page content</main> 
+  <section>Grouped related content</section> 
+  <article>Independent content like a blog post</article> 
+  <aside>Sidebar or additional info</aside> 
+  <footer>Footer information</footer> 
+  <table border="1"> 
+  <tr> 
+    <th>Name</th> 
+    <th>Age</th> 
+  </tr> 
+  <tr> 
+    <td>Alice</td> 
+    <td>23</td> 
+  </tr> 
+  <tr> 
+    <td>Bob</td> 
+    <td>27</td> 
+  </tr> 
+  </table> 
 </body> 
 </html> 
